--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   fl_chart: ^0.64.0
   intl: ^0.18.1
+  syncfusion_flutter_charts: ^30.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
